--- a/src/css/components/input-select.css
+++ b/src/css/components/input-select.css
@@ -1,6 +1,6 @@
-/*! ------------------- */
-/*! Input select        */
-/*! ------------------- */
+/*! ------------ */
+/*! Input select */
+/*! ------------ */
 .input-select {
   -moz-appearance: none !important;
   appearance: none !important;
