--- a/src/css/components/lite-image.css
+++ b/src/css/components/lite-image.css
@@ -1,4 +1,6 @@
-/* Lite Image */
+/*! ---------- */
+/*! Lite Image */
+/*! ---------- */
 .lite-image__body {
   display: table !important;
   position: relative !important;
@@ -114,4 +116,3 @@
     background-image: none !important;
   }
 }
-/* /Lite Image */
