--- a/src/css/components/modal.css
+++ b/src/css/components/modal.css
@@ -1,6 +1,6 @@
-/*! ----------------------- */
-/*! Modal component         */
-/*! ----------------------- */
+/*! --------------- */
+/*! Modal component */
+/*! --------------- */
 .modal__backdrop {
   z-index: 2000 !important;
   position: fixed !important;
