--- a/src/css/components/hero-banner.css
+++ b/src/css/components/hero-banner.css
@@ -1,4 +1,6 @@
-/* Hero banner */
+/*! ----------- */
+/*! Hero Banner */
+/*! ----------- */
 .hero-banner {
   position: relative !important;
   width: 100% !important;
@@ -233,4 +235,3 @@
   height: 100% !important;
   position: relative !important;
 }
-/* /Hero banner */
