--- a/src/css/components/jumbotron-header.css
+++ b/src/css/components/jumbotron-header.css
@@ -1,4 +1,6 @@
-/* Jumbotron Header */
+/*! ---------------- */
+/*! Jumbotron Header */
+/*! ---------------- */
 .jumbotron-header__text[class][class] {
   color: var(--gray-900);
   font-weight: var(--font-weight-bold);
@@ -23,4 +25,3 @@
 .dir.jumbotron-header__description[class][class] {
   margin-top: var(--spacer-3);
 }
-/* /Jumbotron Header */
