--- a/src/css/components/list-group.css
+++ b/src/css/components/list-group.css
@@ -1,4 +1,6 @@
-/* List Group */
+/*! ---------- */
+/*! List Group */
+/*! ---------- */
 .list-group {
   -webkit-box-direction: normal !important;
   -webkit-box-orient: vertical !important;
@@ -191,4 +193,3 @@
     min-height: 88px !important;
   }
 }
-/* /List Group */
