--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -5234,31 +5234,6 @@ html :where(img[class*='wp-image-']) {
   align-items: center !important;
 }
 
-.page-shell-mobile {
-  position: relative !important;
-  z-index: 0 !important;
-  min-height: -webkit-calc(100vh + 65px) !important;
-  min-height: -moz-calc(100vh + 65px) !important;
-  min-height: calc(100vh + 65px) !important;
-}
-@supports (padding: env(safe-area-inset-bottom)) {
-  .page-shell-mobile {
-    padding-left: env(safe-area-inset-left) !important;
-    padding-right: env(safe-area-inset-right) !important;
-  }
-}
-@media (min-width: 744px) {
-  .page-shell-mobile {
-    display: none;
-  }
-}
-.page-shell-max-xl-plus {
-  --page-shell-max-content-width: 1440px !important;
-}
-.page-shell {
-  position: relative !important;
-  min-height: 100vh !important;
-}
 .display-image-wrapper {
   display: inline-block !important;
   vertical-align: bottom !important;
@@ -7296,9 +7271,6 @@ html :where(img[class*='wp-image-']) {
     -ms-flex: 1 0 140px !important;
     flex: 1 0 140px !important;
   }
-}
-.page-shell__navbar {
-  height: 80px !important;
 }
 .header__brand {
   -webkit-box-align: center !important;
@@ -21162,6 +21134,63 @@ input[type='button'].btn-block {
     overflow: clip !important;
   }
 }
+.page-shell-mobile {
+  position: relative !important;
+  z-index: 0 !important;
+  min-height: -webkit-calc(100vh + 65px) !important;
+  min-height: -moz-calc(100vh + 65px) !important;
+  min-height: calc(100vh + 65px) !important;
+}
+@supports (padding: env(safe-area-inset-bottom)) {
+  .page-shell-mobile {
+    padding-left: env(safe-area-inset-left) !important;
+    padding-right: env(safe-area-inset-right) !important;
+  }
+}
+@media (min-width: 744px) {
+  .page-shell-mobile {
+    display: none;
+  }
+}
+.page-shell-max-xl-plus {
+  --page-shell-max-content-width: 1440px !important;
+}
+.page-shell {
+  position: relative !important;
+  min-height: 100vh !important;
+}
+@media (min-width:744px) {
+  .page-shell-mobile__display-none {
+    display: none!important
+  }
+}
+@supports (overflow:clip) {
+  .page-shell__menu-item-text {
+    overflow: clip!important
+  }
+}
+.page-shell-mobile__container-text {
+  max-width: 100% !important;
+  font-size: var(--tl-font-size, 14px) !important;
+  font-weight: var(--tl-font-weight, 400) !important;
+  letter-spacing: var(--tl-letter-spacing, 0) !important;
+  line-height: var(--tl-line-height, 18px) !important;
+  color: var(--tl-color, #222) !important;
+  -webkit-line-clamp: var(--tl-line-clamp) !important;
+}
+.page-shell-mobile__container-text {
+  white-space: pre-line !important;
+  max-width: 100% !important;
+  font-size: var(--tl-font-size, 14px) !important;
+  font-weight: var(--tl-font-weight, 400) !important;
+  letter-spacing: var(--tl-letter-spacing, 0) !important;
+  line-height: var(--tl-line-height, 18px) !important;
+  color: var(--tl-color, #222) !important;
+  -webkit-line-clamp: var(--tl-line-clamp) !important;
+}
+.page-shell__navbar {
+  height: 80px !important;
+}
 
 /* Pagination bullets */
 .pagination-bullets {
@@ -22094,7 +22123,6 @@ input[type='button'].btn-block {
   }
 }
 @media (min-width:744px) {
-  .page-shell-mobile__display-none,
   .hide-md {
     display: none!important
   }
@@ -23111,11 +23139,6 @@ input[type='button'].btn-block {
     margin-bottom: env(safe-area-inset-bottom)!important;
     padding-left: env(safe-area-inset-left)!important;
     padding-right: env(safe-area-inset-right)!important
-  }
-}
-@supports (overflow:clip) {
-  .page-shell__menu-item-text {
-    overflow: clip!important
   }
 }
 @supports (overflow:clip) {
