--- a/src/css/components/page-shell.css
+++ b/src/css/components/page-shell.css
@@ -581,3 +581,60 @@
     overflow: clip !important;
   }
 }
+.page-shell-mobile {
+  position: relative !important;
+  z-index: 0 !important;
+  min-height: -webkit-calc(100vh + 65px) !important;
+  min-height: -moz-calc(100vh + 65px) !important;
+  min-height: calc(100vh + 65px) !important;
+}
+@supports (padding: env(safe-area-inset-bottom)) {
+  .page-shell-mobile {
+    padding-left: env(safe-area-inset-left) !important;
+    padding-right: env(safe-area-inset-right) !important;
+  }
+}
+@media (min-width: 744px) {
+  .page-shell-mobile {
+    display: none;
+  }
+}
+.page-shell-max-xl-plus {
+  --page-shell-max-content-width: 1440px !important;
+}
+.page-shell {
+  position: relative !important;
+  min-height: 100vh !important;
+}
+@media (min-width:744px) {
+  .page-shell-mobile__display-none {
+    display: none!important
+  }
+}
+@supports (overflow:clip) {
+  .page-shell__menu-item-text {
+    overflow: clip!important
+  }
+}
+.page-shell-mobile__container-text {
+  max-width: 100% !important;
+  font-size: var(--tl-font-size, 14px) !important;
+  font-weight: var(--tl-font-weight, 400) !important;
+  letter-spacing: var(--tl-letter-spacing, 0) !important;
+  line-height: var(--tl-line-height, 18px) !important;
+  color: var(--tl-color, #222) !important;
+  -webkit-line-clamp: var(--tl-line-clamp) !important;
+}
+.page-shell-mobile__container-text {
+  white-space: pre-line !important;
+  max-width: 100% !important;
+  font-size: var(--tl-font-size, 14px) !important;
+  font-weight: var(--tl-font-weight, 400) !important;
+  letter-spacing: var(--tl-letter-spacing, 0) !important;
+  line-height: var(--tl-line-height, 18px) !important;
+  color: var(--tl-color, #222) !important;
+  -webkit-line-clamp: var(--tl-line-clamp) !important;
+}
+.page-shell__navbar {
+  height: 80px !important;
+}
