pagination bullets commnets, extract pricing

--- a/src/css/components/pagination-bullets.css
+++ b/src/css/components/pagination-bullets.css
@@ -1,4 +1,6 @@
-/* Pagination bullets */
+/*! ------------------ */
+/*! Pagination Bullets */
+/*! ------------------ */
 .pagination-bullets {
   -webkit-box-pack: center !important;
   -webkit-box-align: end !important;
@@ -53,4 +55,3 @@
   transition: opacity 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955) !important;
   width: 6px !important;
 }
-/* /Pagination bullets */
