--- a/src/css/components/snackbar.css
+++ b/src/css/components/snackbar.css
@@ -1,6 +1,6 @@
-/*! ------------------- */
-/*! Snackbar            */
-/*! ------------------- */
+/*! -------- */
+/*! Snackbar */
+/*! -------- */
 .snackbar-view-show {
   animation-duration: 0.5s !important;
   animation-iteration-count: 1 !important;
