--- a/src/css/components/spinner-chart.css
+++ b/src/css/components/spinner-chart.css
@@ -1,4 +1,6 @@
-/* Spinner Chart */
+/*! ------------- */
+/*! Spinner Chart */
+/*! ------------- */
 .spinner-chart {
   -webkit-box-align: end !important;
   -webkit-box-pack: justify !important;
@@ -123,4 +125,3 @@
   text-overflow: ellipsis !important;
   white-space: nowrap !important;
 }
-/* /Spinner Chart */
