--- a/src/css/components/tabs.css
+++ b/src/css/components/tabs.css
@@ -1,6 +1,6 @@
-/*! ----------------------- */
-/*! Tab component           */
-/*! ----------------------- */
+/*! ------------- */
+/*! Tab component */
+/*! ------------- */
 .tab__on-wrapper {
   -webkit-box-pack: justify !important;
   -ms-flex-pack: justify !important;
@@ -318,6 +318,7 @@
   line-height: 18px !important;
   font-weight: 400 !important;
   color: #717171 !important;
-}.tab__checkbox-mr-16 {
+}
+.tab__checkbox-mr-16 {
   margin-right: 16px !important;
 }
