--- a/src/css/components/tooltip.css
+++ b/src/css/components/tooltip.css
@@ -1,6 +1,6 @@
-/*! ------------------- */
-/*! Tooltip component   */
-/*! ------------------- */
+/*! ----------------- */
+/*! Tooltip component */
+/*! ----------------- */
 .tooltip {
   z-index: 3000;
   max-width: 280px;
