--- a/src/css/animations.css
+++ b/src/css/animations.css
@@ -1,6 +1,6 @@
-/*! ----------------------- */
-/*! CSS animations          */
-/*! ----------------------- */
+/*! -------------- */
+/*! CSS animations */
+/*! -------------- */
 @keyframes keyframe_127wuha {
   from {
     opacity: 0;
