--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -1,6 +1,6 @@
-/*! ----------------------- */
-/*! Fonts                   */
-/*! ----------------------- */
+/*! ----- */
+/*! Fonts */
+/*! ----- */
 @font-face {
   font-family: Circular;
   unicode-range: U+0000-03FF, U+0500-058F, U+0700-074F, U+0780-FAFF, U+FE00-FE6F,
