--- a/src/css/layouts/footer.css
+++ b/src/css/layouts/footer.css
@@ -1,6 +1,6 @@
-/*! ------------------- */
-/*! Footer              */
-/*! ------------------- */
+/*! ---------------- */
+/*! Footer component */
+/*! ---------------- */
 .footer__links:not(last-child) {
   padding-bottom: 24px !important;
   margin-bottom: 24px !important;
