--- a/src/css/layouts/grid.css
+++ b/src/css/layouts/grid.css
@@ -1,4 +1,6 @@
-/* Grid */
+/*! ------------ */
+/*! Grid classes */
+/*! ------------ */
 .row {
   display: grid;
   -webkit-column-gap: 16px;
@@ -104,4 +106,3 @@
     grid-column: span 6
   }
 }
-/* /Grid */
