--- a/src/css/utilities.css
+++ b/src/css/utilities.css
@@ -1,6 +1,6 @@
-/*! ------------------- */
-/*! Utility classes     */
-/*! ------------------- */
+/*! --------------- */
+/*! Utility classes */
+/*! --------------- */
 .contents {
   display: contents !important;
 }
