--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -2427,9 +2427,9 @@
   }
 }
 
-/*! ----------------------- */
-/*! CSS variables           */
-/*! ----------------------- */
+/*! ------------- */
+/*! CSS variables */
+/*! ------------- */
 :root {
   --border-radius-sm: 4px;
   --border-radius: 8px;
@@ -2852,7 +2852,6 @@
     --wp-admin-border-width-focus: 1.5px;
   }
 }
-/* /Root */
 
 /*! ----------------------- */
 /*! Base (global selectors) */
