--- a/src/css/root.css
+++ b/src/css/root.css
@@ -1,6 +1,6 @@
-/*! ----------------------- */
-/*! CSS variables           */
-/*! ----------------------- */
+/*! ------------- */
+/*! CSS variables */
+/*! ------------- */
 :root {
   --border-radius-sm: 4px;
   --border-radius: 8px;
@@ -423,4 +423,3 @@
     --wp-admin-border-width-focus: 1.5px;
   }
 }
-/* /Root */
