--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -1,3 +1,6 @@
+/*! --------------------- */
+/*! Page-specific classes */
+/*! --------------------- */
 .brand.airbnb.center {
   float: none;
   margin: 7px auto 0;
