remove extra comments

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -21345,13 +21345,7 @@ ul {
   transform: scale(0, 0) !important;
   transition-property: -ms-transform, -webkit-transform, transform !important;
   transition-duration: 62.5ms !important;
-} /*!
- * O2.1
- * Copyright 2014 Airbnb, Inc
- *
- * Contains sources adapted from Twitter Bootstrap v3.0.0, which are available
- * under the Apache License v2.0 (http://www.apache.org/licenses/LICENSE-2.0)
- */ /*! normalize.css v2.1.2 | MIT License | git.io/normalize */
+} 
 .tab-item:before {
   background-color: #aaa;
   bottom: -1px;
