--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -3107,7 +3107,7 @@ textarea {
 table {
   border-collapse: collapse;
   border-spacing: 0;
-} /*! HTML5 Boilerplate v4.2.0 | MIT License | git.io/o6Vtiw */
+} 
 @media print {
   * {
     color: #000 !important;
