--- a/src/css/components/calendar.css
+++ b/src/css/components/calendar.css
@@ -1,4 +1,4 @@
-/*! Calendar component */
+/*! CALENDAR COMPONENT */
 .calendar__next-month {
   display: inline-block !important;
   vertical-align: top !important;
