--- a/src/css/components/cards/card-alt-5.css
+++ b/src/css/components/cards/card-alt-5.css
@@ -1,4 +1,4 @@
-/*! Card Alt 5 */
+/*! CARD ALT 5 */
 .card-alt-5__subtitle {
   text-transform: uppercase !important;
   font-size: 12px !important;
