--- a/src/css/components/cards/card-horizontal-basic.css
+++ b/src/css/components/cards/card-horizontal-basic.css
@@ -1,4 +1,4 @@
-/*! Card Horizontal Basic */
+/*! CARD HORIZONTAL BASIC */
 .card-horizontal-basic {
   -webkit-box-align: center !important;
   font-size: 16px !important;
