--- a/src/css/components/cards/card-horizontal-outlined.css
+++ b/src/css/components/cards/card-horizontal-outlined.css
@@ -1,4 +1,4 @@
-/*! Card Horizontal Outlined */
+/*! CARD HORIZONTAL OUTLINED */
 .card-horizontal-outlined__time-list[class][class] {
   scrollbar-width: none;
   display: flex;
