--- a/src/css/components/cards/card-icon.css
+++ b/src/css/components/cards/card-icon.css
@@ -1,4 +1,4 @@
-/*! Card Icon component */
+/*! CARD ICON COMPONENT */
 .card-icon {
   -webkit-box-pack: justify !important;
   -ms-flex-pack: justify !important;
