--- a/src/css/components/cards/card.css
+++ b/src/css/components/cards/card.css
@@ -1,4 +1,4 @@
-/*! Card component  */
+/*! CARD COMPONENT  */
 .card__carousel[class][class] {
   --mis: var(--contentscroller_scroller_margin-inline-start);
   --mie: var(--contentscroller_scroller_margin-inline-end);
