--- a/src/css/components/cards/news-card.css
+++ b/src/css/components/cards/news-card.css
@@ -1,4 +1,4 @@
-/*! News Card component */
+/*! NEWS CARD COMPONENT */
 .news-card {
   border: 1px solid #ebebeb !important;
   border-radius: 12px !important;
