--- a/src/css/components/counter-lg.css
+++ b/src/css/components/counter-lg.css
@@ -1,4 +1,4 @@
-/*! Counter Large component */
+/*! COUNTER LARGE COMPONENT */
 .counter-lg {
   -webkit-box-pack: justify !important;
   -ms-flex-pack: justify !important;
