--- a/src/css/components/counter.css
+++ b/src/css/components/counter.css
@@ -1,4 +1,4 @@
-/*! Counter component */
+/*! COUNTER COMPONENT */
 .counter {
   -webkit-box-pack: justify !important;
   -webkit-box-align: center !important;
