--- a/src/css/components/pagination-bullets.css
+++ b/src/css/components/pagination-bullets.css
@@ -1,4 +1,4 @@
-/*! Pagination Bullets */
+/*! PAGINATION BULLETS */
 .pagination-bullets {
   -webkit-box-pack: center !important;
   -webkit-box-align: end !important;
