--- a/src/css/components/spinner-chart.css
+++ b/src/css/components/spinner-chart.css
@@ -1,4 +1,4 @@
-/*! Spinner Chart */
+/*! SPINNER CHART */
 .spinner-chart {
   -webkit-box-align: end !important;
   -webkit-box-pack: justify !important;
