--- a/src/css/components/tabs.css
+++ b/src/css/components/tabs.css
@@ -1,4 +1,4 @@
-/*! Tab component */
+/*! TAB COMPONENT */
 .tab__on-wrapper {
   -webkit-box-pack: justify !important;
   -ms-flex-pack: justify !important;
