--- a/src/css/components/buttons.css
+++ b/src/css/components/buttons.css
@@ -1,4 +1,4 @@
-/*! Button components */
+/*! BUTTON COMPONENTS */
 .btn-primary:focus-visible {
   outline: 0 !important;
   -webkit-transition: box-shadow 0.2s !important;
