--- a/src/css/components/cards/card-basic.css
+++ b/src/css/components/cards/card-basic.css
@@ -1,4 +1,4 @@
-/*! Card Basic */
+/*! CARD BASIC */
 .card-basic__title[class][class] {
   color: var(--gray-900);
   font-size: var(--font-size-md);
