--- a/src/css/components/forms.css
+++ b/src/css/components/forms.css
@@ -1,4 +1,4 @@
-/*! Form components */
+/*! FORM COMPONENTS */
 .form__switch-secondary {
   appearance: none !important;
   height: 32px !important;
