--- a/src/css/components/list-group.css
+++ b/src/css/components/list-group.css
@@ -1,4 +1,4 @@
-/*! List Group */
+/*! LIST GROUP */
 .list-group {
   -webkit-box-direction: normal !important;
   -webkit-box-orient: vertical !important;
