--- a/src/css/components/snackbar.css
+++ b/src/css/components/snackbar.css
@@ -1,4 +1,4 @@
-/*! Snackbar */
+/*! SNACKBAR */
 .snackbar-view-show {
   animation-duration: 0.5s !important;
   animation-iteration-count: 1 !important;
