--- a/src/css/layouts/footer.css
+++ b/src/css/layouts/footer.css
@@ -1,4 +1,4 @@
-/*! Footer component */
+/*! FOOTER COMPONENT */
 .footer__links:not(last-child) {
   padding-bottom: 24px !important;
   margin-bottom: 24px !important;
