--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -523,7 +523,9 @@
     url('fonts/30d6ab4e2a3c6a6b4f5309d269c774dd.woff') format('woff');
   font-weight: 400;
   font-style: normal;
-} /*! CSS ANIMATIONS */
+}
+
+/*! CSS ANIMATIONS */
 @keyframes keyframe_127wuha {
   from {
     opacity: 0;
@@ -1861,7 +1863,9 @@
   100% {
     transform: rotate(360deg);
   }
-} /*! CSS VARIABLES */
+}
+
+/*! CSS VARIABLES */
 :root {
   --border-radius-sm: 4px;
   --border-radius: 8px;
@@ -2333,7 +2337,9 @@
     --letter-spacing: 0.04em;
     --wp-admin-border-width-focus: 1.5px;
   }
-} /*! BASE (GLOBAL SELECTORS) */
+}
+
+/*! BASE (GLOBAL SELECTORS) */
 *,
 :after,
 :before {
@@ -3931,7 +3937,9 @@ input::-webkit-input-placeholder {
 html :where(img[class*='wp-image-']) {
   height: auto;
   max-width: 100%;
-} /*! UTILITY CLASSES */
+}
+
+/*! UTILITY CLASSES */
 .contents {
   display: contents !important;
 }
@@ -4726,7 +4734,9 @@ html :where(img[class*='wp-image-']) {
 }
 .self-stretch {
   align-self: stretch;
-} /*! FOOTER COMPONENT */
+}
+
+/*! FOOTER COMPONENT */
 .footer__links:not(last-child) {
   padding-bottom: 24px !important;
   margin-bottom: 24px !important;
@@ -5317,7 +5327,9 @@ html :where(img[class*='wp-image-']) {
     -webkit-justify-content: space-between !important;
     justify-content: space-between !important;
   }
-} /*! GRID CLASSES */
+}
+
+/*! GRID CLASSES */
 .row {
   display: grid;
   -webkit-column-gap: 16px;
@@ -5422,7 +5434,9 @@ html :where(img[class*='wp-image-']) {
   .col-xl-6 {
     grid-column: span 6;
   }
-} /*! HEADER COMPONENT */
+}
+
+/*! HEADER COMPONENT */
 .header[class][class] {
   height: 80px;
   width: 100%;
@@ -10630,7 +10644,9 @@ html :where(img[class*='wp-image-']) {
     box-shadow: var(--box-shadow-alt-2);
     transform: scale(1.04);
   }
-} /*! CARD ALT 1 */
+}
+
+/*! CARD ALT 1 */
 @keyframes fade-in-card-alt-1__nav-btn-wrapper {
   from {
     opacity: 0;
@@ -10970,7 +10986,9 @@ html :where(img[class*='wp-image-']) {
 }
 .dir.card-alt-1__btn-save[class][class]:disabled {
   cursor: not-allowed;
-} /*! CARD ALT 2 */
+}
+
+/*! CARD ALT 2 */
 .card-alt-2__img-wrapper {
   position: absolute !important;
   inset: 0 !important;
@@ -11083,7 +11101,9 @@ html :where(img[class*='wp-image-']) {
   font-weight: 400 !important;
   line-height: 1.28571em !important;
   color: #484848 !important;
-} /*! CARD ALT 3 */
+}
+
+/*! CARD ALT 3 */
 .card-alt-3 {
   background: 0 0 !important;
   border: none !important;
@@ -11140,7 +11160,9 @@ html :where(img[class*='wp-image-']) {
     line-height: 24px !important;
     padding: 0 20px !important;
   }
-} /*! CARD ALT 4 */
+}
+
+/*! CARD ALT 4 */
 .card-alt-4__ratings[class][class] {
   font-size: var(--font-size-sm);
   line-height: var(--line-height-sm);
@@ -11778,7 +11800,9 @@ html :where(img[class*='wp-image-']) {
   align-items: center;
   font-size: var(--font-size-sm);
   line-height: var(--line-height-sm);
-} /*! CARD ALT 5 */
+}
+
+/*! CARD ALT 5 */
 .card-alt-5__subtitle {
   text-transform: uppercase !important;
   font-size: 12px !important;
@@ -11817,7 +11841,9 @@ html :where(img[class*='wp-image-']) {
   letter-spacing: 0 !important;
   line-height: 40px !important;
   text-shadow: 0 0 60px rgba(0, 0, 0, 0.4) !important;
-} /*! CARD BANNER */
+}
+
+/*! CARD BANNER */
 .card-banner__container {
   display: block !important;
   border-radius: 12px !important;
@@ -11903,7 +11929,9 @@ html :where(img[class*='wp-image-']) {
 }
 .dir.card-banner[class][class] {
   cursor: pointer;
-} /*! CARD BASIC */
+}
+
+/*! CARD BASIC */
 .card-basic__title[class][class] {
   color: var(--gray-900);
   font-size: var(--font-size-md);
@@ -11949,7 +11977,9 @@ html :where(img[class*='wp-image-']) {
   .dir.card-basic__outer[class][class]:focus-visible {
     transition: none;
   }
-} /*! CARD HORIZONTAL BASIC */
+}
+
+/*! CARD HORIZONTAL BASIC */
 .card-horizontal-basic {
   -webkit-box-align: center !important;
   font-size: 16px !important;
@@ -12006,7 +12036,9 @@ html :where(img[class*='wp-image-']) {
 }
 .card-horizontal-basic__text:last-child {
   padding-bottom: 0 !important;
-} /*! CARD HORIZONTAL OUTLINED */
+}
+
+/*! CARD HORIZONTAL OUTLINED */
 .card-horizontal-outlined__time-list[class][class] {
   scrollbar-width: none;
   display: flex;
@@ -12100,7 +12132,9 @@ html :where(img[class*='wp-image-']) {
 .card-horizontal-outlined__price-info[class][class] {
   font-size: var(--font-size-sm);
   line-height: var(--line-height-sm);
-} /*! CARD ICON COMPONENT */
+}
+
+/*! CARD ICON COMPONENT */
 .card-icon {
   -webkit-box-pack: justify !important;
   -ms-flex-pack: justify !important;
@@ -12137,7 +12171,9 @@ html :where(img[class*='wp-image-']) {
   line-height: 18px !important;
   color: #717171 !important;
   font-weight: 400 !important;
-} /*! CARD PORTRAIT COMPONENT */
+}
+
+/*! CARD PORTRAIT COMPONENT */
 .card-portrait__media-container {
   overflow: hidden;
   position: relative;
@@ -12696,7 +12732,9 @@ html :where(img[class*='wp-image-']) {
     -ms-transform: scale(1.1);
     transform: scale(1.1);
   }
-} /*! CARD COMPONENT  */
+}
+
+/*! CARD COMPONENT  */
 .card__carousel[class][class] {
   --mis: var(--contentscroller_scroller_margin-inline-start);
   --mie: var(--contentscroller_scroller_margin-inline-end);
@@ -13299,7 +13337,9 @@ html :where(img[class*='wp-image-']) {
   .card__slides-container-grid[class][class] {
     grid-auto-rows: minmax(0, 1fr);
   }
-} /*! NEWS CARD COMPONENT */
+}
+
+/*! NEWS CARD COMPONENT */
 .news-card {
   border: 1px solid #ebebeb !important;
   border-radius: 12px !important;
@@ -13337,7 +13377,9 @@ html :where(img[class*='wp-image-']) {
   font-size: 16px !important;
   line-height: 20px !important;
   margin: 0 !important;
-} /*! ALERT COMPONENT */
+}
+
+/*! ALERT COMPONENT */
 .alert .btn-primary {
   border-color: #007a87;
   background-color: #007a87;
@@ -13430,7 +13472,9 @@ html :where(img[class*='wp-image-']) {
     display: inline-block;
     vertical-align: baseline;
   }
-} /*! BUTTON COMPONENTS */
+}
+
+/*! BUTTON COMPONENTS */
 .btn-primary:focus-visible {
   outline: 0 !important;
   -webkit-transition: box-shadow 0.2s !important;
@@ -16513,7 +16557,9 @@ fieldset[disabled] .btn {
 }
 input[type='button'].btn-block {
   width: 100%;
-} /*! CALENDAR COMPONENT */
+}
+
+/*! CALENDAR COMPONENT */
 .calendar__next-month {
   display: inline-block !important;
   vertical-align: top !important;
@@ -16731,7 +16777,9 @@ input[type='button'].btn-block {
 .calendar__text:hover {
   background: #fff !important;
   border: 1.5px solid #222 !important;
-} /*! COUNTER LARGE COMPONENT */
+}
+
+/*! COUNTER LARGE COMPONENT */
 .counter-lg {
   -webkit-box-pack: justify !important;
   -ms-flex-pack: justify !important;
@@ -16926,7 +16974,9 @@ input[type='button'].btn-block {
 }
 .counter-lg__input:focus {
   color: #222 !important;
-} /*! COUNTER COMPONENT */
+}
+
+/*! COUNTER COMPONENT */
 .counter {
   -webkit-box-pack: justify !important;
   -webkit-box-align: center !important;
@@ -17111,7 +17161,9 @@ input[type='button'].btn-block {
   font-family: inherit !important;
   font-size: inherit !important;
   line-height: inherit !important;
-} /*! FORM COMPONENTS */
+}
+
+/*! FORM COMPONENTS */
 .form__switch-secondary {
   appearance: none !important;
   height: 32px !important;
@@ -17625,7 +17677,9 @@ input[type='button'].btn-block {
   font-weight: inherit !important;
   line-height: inherit !important;
   appearance: none !important;
-} /*! HERO BANNER */
+}
+
+/*! HERO BANNER */
 .hero-banner {
   position: relative !important;
   width: 100% !important;
@@ -17859,7 +17913,9 @@ input[type='button'].btn-block {
   width: 100% !important;
   height: 100% !important;
   position: relative !important;
-} /*! INPUT SELECT */
+}
+
+/*! INPUT SELECT */
 .input-select {
   -moz-appearance: none !important;
   appearance: none !important;
@@ -17942,7 +17998,9 @@ input[type='button'].btn-block {
 }
 .input-select-container:focus-within {
   box-shadow: #222 0 0 0 2px inset !important;
-} /*! JUMBOTRON HEADER */
+}
+
+/*! JUMBOTRON HEADER */
 .jumbotron-header__text[class][class] {
   color: var(--gray-900);
   font-weight: var(--font-weight-bold);
@@ -17966,7 +18024,9 @@ input[type='button'].btn-block {
 }
 .dir.jumbotron-header__description[class][class] {
   margin-top: var(--spacer-3);
-} /*! LIST GROUP */
+}
+
+/*! LIST GROUP */
 .list-group {
   -webkit-box-direction: normal !important;
   -webkit-box-orient: vertical !important;
@@ -18158,7 +18218,9 @@ input[type='button'].btn-block {
   .list-group__btn {
     min-height: 88px !important;
   }
-} /*! LITE IMAGE */
+}
+
+/*! LITE IMAGE */
 .lite-image__body {
   display: table !important;
   position: relative !important;
@@ -18257,7 +18319,9 @@ input[type='button'].btn-block {
     display: none !important;
     background-image: none !important;
   }
-} /*! MODAL COMPONENT */
+}
+
+/*! MODAL COMPONENT */
 .modal__backdrop {
   z-index: 2000 !important;
   position: fixed !important;
@@ -18441,7 +18505,9 @@ input[type='button'].btn-block {
   -webkit-box-flex: 0 !important;
   flex: 0 0 16px !important;
   text-align: right !important;
-} /*! PAGE SHELL COMPONENT */
+}
+
+/*! PAGE SHELL COMPONENT */
 .page-shell-mobile__container {
   display: block !important;
 }
@@ -19047,7 +19113,9 @@ input[type='button'].btn-block {
 }
 .page-shell__navbar {
   height: 80px !important;
-} /*! PAGINATION BULLETS */
+}
+
+/*! PAGINATION BULLETS */
 .pagination-bullets {
   -webkit-box-pack: center !important;
   -webkit-box-align: end !important;
@@ -19101,7 +19169,9 @@ input[type='button'].btn-block {
   opacity: 0.6 !important;
   transition: opacity 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955) !important;
   width: 6px !important;
-} /*! SNACKBAR */
+}
+
+/*! SNACKBAR */
 .snackbar-view-show {
   animation-duration: 0.5s !important;
   animation-iteration-count: 1 !important;
@@ -19150,7 +19220,9 @@ input[type='button'].btn-block {
   font-weight: 400 !important;
   margin-right: 16px !important;
   margin-top: 12px !important;
-} /*! SPINNER CHART */
+}
+
+/*! SPINNER CHART */
 .spinner-chart {
   -webkit-box-align: end !important;
   -webkit-box-pack: justify !important;
@@ -19274,7 +19346,9 @@ input[type='button'].btn-block {
   overflow: hidden !important;
   text-overflow: ellipsis !important;
   white-space: nowrap !important;
-} /*! TAB COMPONENT */
+}
+
+/*! TAB COMPONENT */
 .tab__on-wrapper {
   -webkit-box-pack: justify !important;
   -ms-flex-pack: justify !important;
@@ -19590,7 +19664,9 @@ input[type='button'].btn-block {
 }
 .tab__checkbox-mr-16 {
   margin-right: 16px !important;
-} /*! TOOLTIP COMPONENT */
+}
+
+/*! TOOLTIP COMPONENT */
 .tooltip {
   z-index: 3000;
   max-width: 280px;
