fx bug no.4 display question links in mobile

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -11707,7 +11707,7 @@
     display: none !important;
   }
 }
-@media (max-width: 744px) {
+/* @media (max-width: 744px) {
   .app-theme__navbar-create-button {
     display: none !important;
   }
@@ -11716,7 +11716,7 @@
   .app-theme__navbar-create-button {
     display: none !important;
   }
-}
+} */
 .app-theme__navbar-create-btn-wrapper {
   margin-top: 22px !important;
 }
