fx bug no.18 add padding to btn

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -50728,3 +50728,10 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
     display: block !important;
   }
 }
+
+._1o7kvyb {
+  text-align: left !important;
+  margin: 24px 16px !important;
+  width: 100% !important;
+  color: rgb(34, 34, 34) !important;
+}
