fx bug no.10 open accordationn

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -50735,3 +50735,45 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   width: 100% !important;
   color: rgb(34, 34, 34) !important;
 }
+
+._1rw28r4l {
+  display: block !important;
+  opacity: 1 !important;
+  visibility: visible !important;
+}
+
+.dir.e1d7qei1[class][class] {
+  animation-duration: 0.3s;
+  animation-name: fadein;
+}
+.dir-ltr.ebn7uav[class][class] {
+  padding-right: 32px;
+}
+.dir.ebn7uav[class][class] {
+  margin-bottom: 32px;
+  animation-timing-function: var(--bd-d-m-c-q);
+}
+.ebn7uav[class][class] {
+  color: var(--fo-jk-r-s);
+  font-size: 14px;
+  line-height: 20px;
+}
+.dir.rzhf7eq[class][class] {
+  padding: 24px 0;
+}
+.dir.r1y3t7ro[class][class] {
+  padding: 24px 0 8px 0;
+}
+@media (min-width: 375px) {
+  .rzhf7eq[class][class] {
+    font-size: var(--y-g-ar-y);
+    line-height: var(--cb-pewj);
+  }
+}
+.rzhf7eq[class][class] {
+  font-size: var(--iw-ehf-f);
+  line-height: var(---s-l-myu);
+  display: grid;
+  grid-gap: 16px;
+  grid-template-columns: 1fr auto;
+}
