--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -53,6 +53,12 @@ h1 {
   text-transform: uppercase;
 }
 
+@media (min-width: 576px) {
+  h1 {
+    text-align: center;
+  }
+}
+
 input {
   background: none;
   border: none;
@@ -65,7 +71,7 @@ input {
   position: fixed;
   top: 2rem;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translateX(-50%) scale(0.9);
   background: #000;
   color: #ffff;
   padding: 1rem 1.5rem;
@@ -75,15 +81,41 @@ input {
   transition: 300ms;
 }
 
+.input-search:hover,
+.input-search:focus,
+.input-search:valid {
+  transform: translateX(-50%) scale(1);
+}
+
 .input-search::placeholder {
   color: #ffff;
 }
 
 .input-search--scrolled {
-  transform: translateX(-50%) scale(0.9);
   opacity: 0.5;
 }
 
 .hidden {
   display: none;
+}
+
+button {
+  background: #eee;
+  padding: 0.75rem 1.5rem;
+  font-family: 'Merriweather', serif;
+  margin-bottom: 0.5rem;
+  transition: 300ms;
+  border: none;
+  cursor: pointer;
+}
+
+@media (min-width: 576px) {
+  button {
+    width: 100%;
+  }
+}
+
+button:hover {
+  background: #000;
+  color: #ffff;
 }
